--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "package"
+name = "llmsql"
 version = "0.0.1"
 description = "This is a data science project"
 authors = [
-  { name = "Your name (or your organization/company/team)" },
+  { name = "delcaux consulting" },
 ]
 
 readme = "README.md"
@@ -15,7 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     
 ]
-requires-python = "~=3.12.0"
+requires-python = "~=3.11.0"
 
 [tool.black]
 line-length = 99
@@ -28,5 +28,5 @@ exclude = '''
 '''
 
 [tool.ruff.lint.isort]
-known_first_party = ["package"]
+known_first_party = ["llmsql"]
 force_sort_within_sections = true
